--- a/README.rm
+++ b/README.rm
@@ -1,1 +1,2 @@
-Discord Server : https://discord.gg/YPF4jZR
+If you want To fix Something / Give Feedback Then DM me Or Join My Discord Channel.
+Discord Server : https://discord.gg/WkTuM3G
