--- a/README.rm
+++ b/README.rm
@@ -1,2 +1,2 @@
-If you want To fix Something / Give Feedback Then DM me Or Join My Discord Channel.
-Discord Server : https://discord.gg/WkTuM3G
+RobrnAIOV2 By KappaHD#9291
+Discord Server : https://discord.gg/7YSAnHv
